# customer/api/customer/customer_http.pb.go
@@ -20,17 +20,21 @@ var _ = binding.EncodeURL
 const _ = http.SupportPackageIsVersion1
 
 const OperationCustomerGetCustomer = "/api.customer.Customer/GetCustomer"
+const OperationCustomerLogin = "/api.customer.Customer/Login"
 
 type CustomerHTTPServer interface {
 	// GetCustomer	rpc CreateCustomer (CreateCustomerRequest) returns (CreateCustomerReply);
 	//	rpc UpdateCustomer (UpdateCustomerRequest) returns (UpdateCustomerReply);
 	//	rpc DeleteCustomer (DeleteCustomerRequest) returns (DeleteCustomerReply);
 	GetCustomer(context.Context, *GetCustomerRequest) (*GetCustomerReply, error)
+	// Login 登录
+	Login(context.Context, *LoginReq) (*LoginRes, error)
 }
 
 func RegisterCustomerHTTPServer(s *http.Server, srv CustomerHTTPServer) {
 	r := s.Route("/")
 	r.GET("/customer/get-verify-code/{Telephone}", _Customer_GetCustomer0_HTTP_Handler(srv))
+	r.POST("/customer/login", _Customer_Login0_HTTP_Handler(srv))
 }
 
 func _Customer_GetCustomer0_HTTP_Handler(srv CustomerHTTPServer) func(ctx http.Context) error {
@@ -55,8 +59,31 @@ func _Customer_GetCustomer0_HTTP_Handler(srv CustomerHTTPServer) func(ctx http.C
 	}
 }
 
+func _Customer_Login0_HTTP_Handler(srv CustomerHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in LoginReq
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationCustomerLogin)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.Login(ctx, req.(*LoginReq))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*LoginRes)
+		return ctx.Result(200, reply)
+	}
+}
+
 type CustomerHTTPClient interface {
 	GetCustomer(ctx context.Context, req *GetCustomerRequest, opts ...http.CallOption) (rsp *GetCustomerReply, err error)
+	Login(ctx context.Context, req *LoginReq, opts ...http.CallOption) (rsp *LoginRes, err error)
 }
 
 type CustomerHTTPClientImpl struct {
@@ -74,6 +101,19 @@ func (c *CustomerHTTPClientImpl) GetCustomer(ctx context.Context, in *GetCustome
 	opts = append(opts, http.Operation(OperationCustomerGetCustomer))
 	opts = append(opts, http.PathTemplate(pattern))
 	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, err
+}
+
+func (c *CustomerHTTPClientImpl) Login(ctx context.Context, in *LoginReq, opts ...http.CallOption) (*LoginRes, error) {
+	var out LoginRes
+	pattern := "/customer/login"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationCustomerLogin))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
 	if err != nil {
 		return nil, err
 	}
